# apps/server/src/routes/job.routes.ts
@@ -3,7 +3,13 @@ import validator from '../middleware/validator';
 import { JobPostingSchema } from '../schemas/job.schemas';
 import { verifyJwt } from '../middleware/auth.middleware';
 import { guard } from '../utils/guard';
-import { jobOpeningHandler } from '../controllers/job.controllers';
+import {
+    getAllJobHandler,
+    jobOpeningHandler,
+    getJobBySlugHandler,
+    deleteJobBySlugHandler,
+    updateJobBySlugHandler,
+} from '../controllers/job.controllers';
 
 const router = express.Router();
 
@@ -13,6 +19,21 @@ router.post(
     verifyJwt,
     guard.check(['client']),
     jobOpeningHandler,
+);
+
+router.get('/', getAllJobHandler);
+router.get('/:slug', getJobBySlugHandler);
+router.delete(
+    '/:slug',
+    verifyJwt,
+    guard.check(['client']),
+    deleteJobBySlugHandler,
+);
+router.patch(
+    '/:slug',
+    verifyJwt,
+    guard.check(['client']),
+    updateJobBySlugHandler,
 );
 
 export default router;
