# apps/server/swagger.json
@@ -276,7 +276,7 @@
                 }
             }
         },
-        "/api/jobs": {
+        "/api/jobs/": {
             "post": {
                 "tags": ["Jobs"],
                 "description": "Job Opening",
@@ -438,6 +438,124 @@
                         "description": "Bad Request"
                     }
                 }
+            }
+        },
+        "/api/jobs": {
+            "get": {
+                "tags": ["Jobs"],
+                "description": "Get All Jobs",
+                "responses": {
+                    "200": {
+                        "description": "Get All Jobs"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
+        "/api/jobs/{slug}": {
+            "get": {
+                "tags": ["Jobs"],
+                "description": "Get Job By Slug",
+                "responses": {
+                    "200": {
+                        "description": "job deleted"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "slug",
+                        "in": "path",
+                        "description": "Query parameter",
+                        "required": true,
+                        "schema": {
+                            "example": "e7f7u9XuMNNrasUh451k0",
+                            "type": "string"
+                        }
+                    }
+                ]
+            },
+            "patch": {
+                "tags": ["Jobs"],
+                "description": "update job details",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "title": {
+                                        "type": "string",
+                                        "example": "Software Engineer"
+                                    }
+                                }
+                            },
+                            "example": {
+                                "title": "Computer Science"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Job updated"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "slug",
+                        "in": "path",
+                        "description": "Query parameter",
+                        "required": true,
+                        "schema": {
+                            "example": "e7f7u9XuMNNrasUh451k0",
+                            "type": "string"
+                        }
+                    }
+                ]
+            },
+            "delete": {
+                "tags": ["Jobs"],
+                "description": "Delete Job",
+                "responses": {
+                    "200": {
+                        "description": "Job deleted"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "slug",
+                        "in": "path",
+                        "description": "Query parameter",
+                        "required": true,
+                        "schema": {
+                            "example": "e7f7u9XuMNNrasUh451k0",
+                            "type": "string"
+                        }
+                    }
+                ]
             }
         }
     }
